# portkatz

./: .replit  LICENSE  README.md  dns_rs_agent.portkatz.py  dns_rs_server.portkatz.py  portkatz.py  pyproject.toml  requirements.txt
pkbin/: dns_reverseshell.py
